# universal_mentor_nexus_architect

./: README.md  index.html  pyproject.toml
2/cache/01_CORE_THINKING/Logic_Reasoning/: Cognitive_Biases_(Kahneman).md  First_Principles_Thinking.md  Game_Theory_Basics.md  Propositional_Logic.md  Socratic_Questioning.md
2/cache/01_CORE_THINKING/Meta_Learning/: Active_Recall_Systems.md  Autodidact_Frameworks.md  Feynman_Technique_Mastery.md  Spaced_Repetition_Algorithms.md  Speed_Reading_Science.md
2/cache/01_CORE_THINKING/Systems_Thinking/: Cybernetics.md  Feedback_Loops.md  Stock_and_Flow_Diagrams.md
archive/01_CORE_THINKING/Logic_Reasoning/: Cognitive_Biases_(Kahneman).md  First_Principles_Thinking.md  Game_Theory_Basics.md  Socratic_Questioning.md
archive/01_CORE_THINKING/Meta_Learning/: Active_Recall_Systems.md  Feynman_Technique_Mastery.md  Spaced_Repetition_Algorithms.md  Speed_Reading_Science.md
archive/01_CORE_THINKING/Systems_Thinking/: Antifragility_(Taleb).md  Cybernetics.md  Stock_and_Flow_Diagrams.md
data/: THE_BOOK_OF_EVERYTHING.md
data/cache/01_CORE_THINKING/Logic_Reasoning/: Cognitive_Biases_(Kahneman).md  First_Principles_Thinking.md  Game_Theory_Basics.md  Propositional_Logic.md  Socratic_Questioning.md
data/cache/01_CORE_THINKING/Meta_Learning/: Active_Recall_Systems.md  Autodidact_Frameworks.md  Feynman_Technique_Mastery.md  Spaced_Repetition_Algorithms.md  Speed_Reading_Science.md
data/cache/01_CORE_THINKING/Research_Methods/: Causal_Inference.md  Double-Blind_Studies.md  Statistical_Significance.md  (+2 more)
src/: config.py  main.py  merge.py
(+364 files in other folders)
