[project]
name = "universal-mentor-nexus-architect"
version = "2026.1.1"
description = "High-Velocity Curriculum Generator (Debug Edition)"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "pydantic",
    "python-dotenv"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff"
]