[project]
name = "universal-mentor-nexus-architect"
version = "2026.1.3"
description = "High-Velocity Curriculum Generator (Cerebras/OpenAI Edition)"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
    "python-dotenv"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
target-version = "py311"
line-length = 80