[project]
name = "universal-mentor-nexus-architect"
version = "2026.1.4"
description = "High-Velocity Curriculum Generator (PDF Edition)"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
    "python-dotenv",
    "markdown",
    "weasyprint"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
target-version = "py311"
line-length = 80